<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_bg">

    <include
        layout="@layout/layout_test_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_150" />

    <ImageView
        android:layout_width="@dimen/w_647"
        android:layout_height="@dimen/h_645"
        android:layout_marginLeft="@dimen/w_170"
        android:layout_marginTop="@dimen/h_256"
        android:src="@mipmap/icon_update" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/w_960"
        android:layout_marginTop="@dimen/h_300"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kupa TV"
            android:textColor="@color/white"
            android:textSize="@dimen/h_60" />

        <Space
            android:layout_width="@dimen/w_35"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/update_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="v1.0.1"
            android:textColor="@color/white"
            android:textSize="@dimen/h_36" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/update_info_layout"
        android:layout_width="@dimen/w_590"
        android:layout_height="@dimen/h_163"
        android:layout_marginLeft="@dimen/w_960"
        android:layout_marginTop="@dimen/h_440"
        android:visibility="gone">

        <TextView
            android:id="@+id/update_new_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="最新版本：v1.0.2"
            android:textColor="@color/white"
            android:textSize="@dimen/h_36" />

        <TextView
            android:id="@+id/update_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            tools:text="发布日期：2016.12.16"
            android:textColor="@color/white"
            android:textSize="@dimen/h_36" />

        <TextView
            android:id="@+id/update_describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/h_36" />

    </FrameLayout>

    <TextView
        android:id="@+id/update_watch_all"
        android:layout_width="@dimen/w_112"
        android:layout_height="@dimen/h_40"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/w_250"
        android:layout_marginTop="@dimen/h_560"
        android:background="@drawable/watch_all_selector"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/see_all"
        android:textColor="@color/white"
        android:textSize="@dimen/h_20"
        android:visibility="gone" />

    <TextView
        android:id="@+id/update_no_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/w_960"
        android:layout_marginTop="@dimen/h_380"
        android:text="@string/now_is_new_version"
        android:textColor="@color/white"
        android:textSize="@dimen/h_26" />

    <TextView
        android:id="@+id/update_btn"
        android:layout_width="@dimen/w_320"
        android:layout_height="@dimen/h_80"
        android:layout_marginLeft="@dimen/w_960"
        android:layout_marginTop="@dimen/h_670"
        android:background="@drawable/btn_update_selector"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/check_for_update"
        android:textColor="@color/white"
        android:textSize="@dimen/h_36" />

    <FrameLayout
        android:id="@+id/update_progress_layout"
        android:layout_width="@dimen/w_330"
        android:layout_height="@dimen/h_88"
        android:layout_marginLeft="@dimen/w_955"
        android:layout_marginTop="@dimen/h_666"
        android:visibility="gone">

        <com.kupaworld.androidtv.view.DynamicWave
            android:id="@+id/update_wave"
            android:layout_width="@dimen/w_320"
            android:layout_height="@dimen/h_80"
            android:layout_gravity="center" />

        <View
            android:layout_width="@dimen/w_330"
            android:layout_height="@dimen/h_88"
            android:background="@drawable/cover_wave_progress" />

        <TextView
            android:id="@+id/update_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="下载中   45%"
            android:textColor="@color/white"
            android:textSize="@dimen/h_36" />
    </FrameLayout>

    <TextView
        android:id="@+id/local_update_btn"
        android:layout_width="@dimen/w_320"
        android:layout_height="@dimen/h_80"
        android:layout_marginLeft="@dimen/w_1350"
        android:layout_marginTop="@dimen/h_670"
        android:background="@drawable/btn_update_selector"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/local_upgrade"
        android:textColor="@color/white"
        android:textSize="@dimen/h_36" />
</FrameLayout>