<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_bg">

    <com.kupaworld.androidtvwidget.view.FrameMainLayout
        android:id="@+id/setting_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/layout_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h_150" />

        <com.kupaworld.androidtvwidget.view.ReflectItemView
            android:id="@+id/settings_network"
            android:layout_width="@dimen/w_450"
            android:layout_height="@dimen/h_328"
            android:layout_marginLeft="@dimen/w_278"
            android:layout_marginTop="@dimen/h_226"
            android:background="@drawable/layout_setting_bg"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:isShape="true"
            app:radius="@dimen/w_10">

            <ImageView
                android:id="@+id/settings_wifi"
                android:layout_width="@dimen/w_144"
                android:layout_height="@dimen/h_144"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/h_50"
                android:background="@drawable/debug_bg"
                android:padding="@dimen/h_28"
                android:src="@mipmap/kupatv_setting_network" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="@dimen/h_45"
                android:text="@string/network"
                android:textColor="@color/white"
                android:textSize="@dimen/h_45" />

        </com.kupaworld.androidtvwidget.view.ReflectItemView>

        <com.kupaworld.androidtvwidget.view.ReflectItemView
            android:id="@+id/settings_show"
            android:layout_width="@dimen/w_450"
            android:layout_height="@dimen/h_328"
            android:layout_marginLeft="@dimen/w_741"
            android:layout_marginTop="@dimen/h_226"
            android:background="@drawable/layout_setting_bg"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:isShape="true"
            app:radius="@dimen/w_10">


            <ImageView
                android:layout_width="@dimen/w_144"
                android:layout_height="@dimen/h_144"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/h_50"
                android:background="@drawable/file_bg"
                android:padding="@dimen/h_28"
                android:src="@mipmap/kupatv_setting_adjust" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="@dimen/h_45"
                android:text="@string/adjustment"
                android:textColor="@color/white"
                android:textSize="@dimen/h_45" />

        </com.kupaworld.androidtvwidget.view.ReflectItemView>

        <com.kupaworld.androidtvwidget.view.ReflectItemView
            android:id="@+id/settings_more"
            android:layout_width="@dimen/w_450"
            android:layout_height="@dimen/h_328"
            android:layout_marginLeft="@dimen/w_1204"
            android:layout_marginTop="@dimen/h_226"
            android:background="@drawable/layout_setting_bg"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:isShape="true"
            app:radius="@dimen/w_10">


            <ImageView
                android:layout_width="@dimen/w_144"
                android:layout_height="@dimen/h_144"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/h_50"
                android:background="@drawable/apps_bg"
                android:padding="@dimen/h_28"
                android:src="@mipmap/icon_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="@dimen/h_45"
                android:text="@string/more"
                android:textColor="@color/white"
                android:textSize="@dimen/h_45" />

        </com.kupaworld.androidtvwidget.view.ReflectItemView>

        <com.kupaworld.androidtvwidget.view.ReflectItemView
            android:id="@+id/settings_update"
            android:layout_width="@dimen/w_450"
            android:layout_height="@dimen/h_328"
            android:layout_marginLeft="@dimen/w_278"
            android:layout_marginTop="@dimen/h_563"
            android:background="@drawable/layout_setting_bg"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:isShape="true"
            app:radius="@dimen/w_10">


            <ImageView
                android:layout_width="@dimen/w_144"
                android:layout_height="@dimen/h_144"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/h_50"
                android:background="@drawable/setting_bg"
                android:padding="@dimen/h_28"
                android:src="@mipmap/kupatv_setting_systemupdate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="@dimen/h_45"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="@dimen/h_45" />

        </com.kupaworld.androidtvwidget.view.ReflectItemView>

        <com.kupaworld.androidtvwidget.view.ReflectItemView
            android:id="@+id/settings_apps"
            android:layout_width="@dimen/w_450"
            android:layout_height="@dimen/h_328"
            android:layout_marginLeft="@dimen/w_741"
            android:layout_marginTop="@dimen/h_563"
            android:background="@drawable/layout_setting_bg"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:isShape="true"
            app:radius="@dimen/w_10">

            <ImageView
                android:layout_width="@dimen/w_144"
                android:layout_height="@dimen/h_144"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/h_50"
                android:background="@drawable/wless_bg"
                android:padding="@dimen/h_28"
                android:src="@mipmap/kupatv_setting_manageapplication" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="@dimen/h_45"
                android:text="@string/Application_management"
                android:textColor="@color/white"
                android:textSize="@dimen/h_45" />

        </com.kupaworld.androidtvwidget.view.ReflectItemView>

        <com.kupaworld.androidtvwidget.view.ReflectItemView
            android:id="@+id/settings_about"
            android:layout_width="@dimen/w_450"
            android:layout_height="@dimen/h_328"
            android:layout_marginLeft="@dimen/w_1204"
            android:layout_marginTop="@dimen/h_563"
            android:background="@drawable/layout_setting_bg"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:isShape="true"
            app:radius="@dimen/w_10">


            <ImageView
                android:layout_width="@dimen/w_144"
                android:layout_height="@dimen/h_144"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/h_50"
                android:background="@drawable/network_bg"
                android:padding="@dimen/h_28"
                android:src="@mipmap/kupatv_setting_aboutequipment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="@dimen/h_45"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="@dimen/h_45" />

        </com.kupaworld.androidtvwidget.view.ReflectItemView>
    </com.kupaworld.androidtvwidget.view.FrameMainLayout>

    <!-- 最顶层边框 -->
    <com.kupaworld.androidtvwidget.view.MainUpView
        android:id="@+id/setting_mainUpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:upImageRes="@drawable/white_light_10" />

</RelativeLayout>